--- a/index.html
+++ b/index.html
@@ -5,27 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 
-<body>
+<body class="body">
 
     <div class="container" id="app">
-        <div class="card">
-            <h1>
-                Счетчик: {{ counter }}
-            </h1>
+        <div class="mb-3 mt-3 content-wrapper">
+            <h2 class="card-title text-dark form-label mb-3">{{ title }}</h2>
+            <input type="email" class="form-control w-50 mb-3" id="exampleFormControlInput1"
+                v-bind:placeholder="placeholderCustom" v-bind:value="inputValue">
 
-            <div>
-                <button class="btn btn__green" v-on:click="counter++">
-                    +
-                </button>
-
-                <button class="btn btn__red" v-on:click="counter = counter - 1">
-                    -
-                </button>
-            </div>
+            <button type="button" class="btn btn-success">Добавить</button>
         </div>
     </div>
 
