--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
         <div class="mb-3 mt-3 content-wrapper">
             <h2 class="card-title text-dark form-label mb-3">{{ title }}</h2>
             <input type="email" class="form-control w-50 mb-3" id="exampleFormControlInput1"
-                v-bind:placeholder="placeholderCustom" v-bind:value="inputValue">
+                v-bind:placeholder="placeholderCustom" v-bind:value="inputValue" v-on:input="inputChangeHandler"
+                v-on:keypress="inputKeyPress" />
 
-            <button type="button" class="btn btn-success">Добавить</button>
+
+            <ul class="list-group w-50 mb-3" v-if="notes.length !==0">
+                <li class="list-group-item d-flex justify-content-between align-items-center"
+                    v-for="(myNote, index) in notes">
+                    {{ myNote }}
+                    <button class="btn btn-danger" v-on:click="removeNote(index, $event)">
+                        Удалить
+                    </button>
+                </li>
+            </ul>
+
+            <p v-else="notes.length === 0">Заметок пока нет</p>
+
+            <button type="button" v-on:click="addNewNote" class="btn btn-success">Добавить</button>
         </div>
     </div>
 
